[B]1.1.7:[/B]
- doplněk už není označen jako nefunkční - web serialycz.cz je znovu na nohou
[B]1.1.6:[/B]
- oprava nesprávného názvu seriálu při přehrávání
[B]1.1.5:[/B]
- oprava nefuknčního přehrávání, pokud některý ze zdrojů na stránce je chybový #50
- přidaná možnost volit kvalitu přehrávání - default : Zeptat se
[B]1.1.4:[/B]
- oprava zmrvených náhledů seriálů pod windows #44
[B]1.1.3:[/B]
- přidán Usage Tracking
[B]1.1.2:[/B]
- oprava nefunkčního stahování na windows
[B]1.1.1:[/B]
- oprava kriticke chyby - nefuknční přehrávání
[B]1.1.0:[/B]
- přidaná podpora stahování
- přidány ikonky
- opraveny chyby při přerhávání viedí z jiné domény než serialycz.cz
[B]1.0.7:[/B]
- migrace na nové API stream.resolver
[B]1.0.5:[/B]
- opraven chyba při listování epizod Hawaii-Five-0
- opraven zkokuknito resolver
[B]1.0.4:[/B]
- lokalizace cs,en
- zvýšení verze kvůli stream resolveru
[B]1.0.2:[/B]
- pokud je nalezen více než jeden zdroj seriálu, plugin nechá uživatele vybrat
- opravy chyb, kdy přehrávání vůbec nefungovalo
- oprava přehrávání na XboXu (doufejme)
[B]1.0.1:[/B]
 - opraveno neúplné listování epizod u některých seriálů
 - přidaná závistols na script.module.stream.resolver - přesunut kód, který
 získává URL streamů
 - přidán přehled nejnovějších epizod
 - přidán krátký popis ke každému seriálu
[B]1.0.0:[/B]
Initial version