@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.serialycz.cz"
        name="serialycz.cz"
-       version="1.1.7"
+       version="1.1.8"
        provider-name="Libor Zoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.2.7" />
+    <import addon="script.module.stream.resolver" version="1.3.0" />
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
