@@ -1,3 +1,5 @@
+[B]1.1.8:[/B]
+- migrace na ContentProvider API
 [B]1.1.7:[/B]
 - doplněk už není označen jako nefunkční - web serialycz.cz je znovu na nohou
 [B]1.1.6:[/B]
